fix: video palge normal width on firefox

--- a/src/modules/rules/video/groups/playerLayout.scss
+++ b/src/modules/rules/video/groups/playerLayout.scss
@@ -251,6 +251,7 @@ html[normalscreen-width] {
         #playerWrap {
             width: $normal-width !important;
             height: fit-content !important;
+            display: flex !important;
             #bilibili-player-placeholder {
                 position: static;
                 width: $normal-width !important;
